Fixed overflow issue
hover/active overflows were causing scrollbars in navmenu

--- a/ClientApp/components/SVGs/icons.css
+++ b/ClientApp/components/SVGs/icons.css
@@ -38,13 +38,11 @@
 
 a:hover > .LinkText {
     display: block;
-    overflow: auto;
     clear: right;
 }
 
 .active > .LinkText {
     display: block;
-    overflow: auto;
     clear: right;
 }
 
